src/blocks/WeatherForecast/WeatherForecast.module.css
.WeatherForecast {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  gap: 48px;

  .nav {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .weatherInfo {
    display: grid;
    grid-template-areas:
      "summary hourlyForecast"
      "dailyForecast hourlyForecast";
    gap: 32px;

    width: 100%;

    > * {
      width: 100%;
    }
  }

  .weatherSummary {
    grid-area: summary;
  }

  .dailyForecast {
    grid-area: dailyForecast;
  }

  .hourlyForecast {
    grid-area: hourlyForecast;
  }
}

@media (max-width: 960px) {
  .WeatherForecast {
    h1 {
      width: 70%;
    }

    .weatherInfo {
      display: flex;
      flex-direction: column;
    }
  }
}

@media (max-width: 430px) {
  .WeatherForecast {
    .nav {
      * {
        transform: scale(0.8);
        transform-origin: left;
      }
    }

    h1 {
      transform: scale(0.8);
    }
  }
}

